--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,13 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(Assignment01)
+project(Project)
 set(TARGET ${CMAKE_PROJECT_NAME})
 set(CMAKE_BUILD_TYPE Debug)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
 
 find_package(OpenGL REQUIRED)
+find_package(OpenCV REQUIRED)
 find_package(glfw3 REQUIRED)
 find_package(glm REQUIRED)
 find_package(GLEW REQUIRED)
@@ -24,6 +25,8 @@ set(SOURCES
 
 add_executable(${TARGET} ${SOURCES})
 
+include_directories(${OpenCV_INCLUDE_DIRS})
+
 target_include_directories(${TARGET} PRIVATE
 	${PROJECT_SOURCE_DIR}/src
 	${PROJECT_SOURCE_DIR}/depends/imgui
@@ -31,5 +34,5 @@ target_include_directories(${TARGET} PRIVATE
 	${OPENGL_INCLUDE_DIR}
 	${GLM_INCLUDE_DIRS/../include}
 	)
-target_link_libraries(${TARGET} ${OPENGL_LIBRARIES} glfw GLEW::GLEW)
+target_link_libraries(${TARGET} ${OPENGL_LIBRARIES} ${OpenCV_LIBS} glfw GLEW::GLEW)
 
